[package]
name = "wsm"
description = "Cilki's WorkSpace Manager"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cilki/wsm/"

[dependencies]
toml = "0"
serde = { version = "1", features = ["derive"] }
git-repository = { version = "0", optional = true }
walkdir = "2"
cmd_lib = "1.3.0"
regex = "1"
log = "0.4.17"
env_logger = "0.10.0"
pico-args = "0.5.0"
sha2 = "0.10.6"
anyhow = "1.0.82"

[features]
git_oxide = ["dep:git-repository"]