[package]
name = "wsm"
description = "Cilki's WorkSpace Manager"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cilki/wsm/"

[dependencies]
anyhow = "1.0.82"
cmd_lib = "1.3.0"
git-repository = { version = "0", optional = true }
log = "0.4.17"
pico-args = "0.5.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.6"
toml = "0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2"

[build-dependencies]
built = { version = "0.7", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }

[features]
git_oxide = ["dep:git-repository"]